workloads/databases-k8s/0_pgoperator.yaml
---
# Source: postgres-operator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: postgres-operator
    helm.sh/chart: postgres-operator-1.6.2
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: postgres-operator
  name: postgres-operator
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: postgres-operator
    app.kubernetes.io/name: postgres-operator
---
# Source: postgres-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: postgres-operator
    helm.sh/chart: postgres-operator-1.6.2
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: postgres-operator
  name: postgres-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: postgres-operator
      app.kubernetes.io/instance: postgres-operator
  template:
    metadata:
      annotations:
        checksum/config: 87ec91260d6049dfd0b29647cbdf9cd1555e9da1750dbcc9937d9c8f483a033c
      labels:
        app.kubernetes.io/name: postgres-operator
        app.kubernetes.io/instance: postgres-operator
    spec:
      serviceAccountName: postgres-operator
      containers:
      - name: postgres-operator
        image: "registry.opensource.zalan.do/acid/postgres-operator:v1.6.2"
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 250Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
      affinity:
        {}
      nodeSelector:
        {}
      tolerations:
        []
