workloads/databases-k8s/1_pgoperatorui.yaml
---
# Source: postgres-operator-ui/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: postgres-operator-ui
    helm.sh/chart: postgres-operator-ui-1.6.2
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: postgres-operator-ui
  name: postgres-operator-ui
spec:
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
  selector:
    app.kubernetes.io/instance: postgres-operator-ui
    app.kubernetes.io/name: postgres-operator-ui
  type: ClusterIP
---
# Source: postgres-operator-ui/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: postgres-operator-ui
    helm.sh/chart: postgres-operator-ui-1.6.2
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: postgres-operator-ui
  name: postgres-operator-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: postgres-operator-ui
      app.kubernetes.io/instance: postgres-operator-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postgres-operator-ui
        app.kubernetes.io/instance: postgres-operator-ui
    spec:
      serviceAccountName: postgres-operator-ui
      containers:
        - name: "service"
          image: "registry.opensource.zalan.do/acid/postgres-operator-ui:v1.6.2"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              protocol: "TCP"
          readinessProbe:
            httpGet:
              path: "/health"
              port: 8081
            initialDelaySeconds: 5
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
