workloads/databases-k8s/3_pgadmin.yaml
---
# Source: pgadmin4/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pgadmin-pgadmin4
  labels:
    app.kubernetes.io/name: pgadmin4
    helm.sh/chart: pgadmin4-1.6.1
    app.kubernetes.io/instance: pgadmin
    app.kubernetes.io/version: "5.1"
    app.kubernetes.io/managed-by: Helm
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: pgadmin4
      app.kubernetes.io/instance: pgadmin
  ingress:
  - ports:
    - port: http
---
# Source: pgadmin4/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-pgadmin4
  labels:
    app.kubernetes.io/name: pgadmin4
    helm.sh/chart: pgadmin4-1.6.1
    app.kubernetes.io/instance: pgadmin
    app.kubernetes.io/version: "5.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: pgadmin4
    app.kubernetes.io/instance: pgadmin
---
# Source: pgadmin4/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-pgadmin4
  labels:
    app.kubernetes.io/name: pgadmin4
    helm.sh/chart: pgadmin4-1.6.1
    app.kubernetes.io/instance: pgadmin
    app.kubernetes.io/version: "5.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pgadmin4
      app.kubernetes.io/instance: pgadmin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pgadmin4
        app.kubernetes.io/instance: pgadmin
      annotations:
        checksum/secret: 4965cde65599a97f0a53e9dad7cb3ffb9c7b92ca4a89e5da38ff5b7ed1943ca9

    spec:
      containers:
        - name: pgadmin4
          image: "docker.io/dpage/pgadmin4:5.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /misc/ping
              port: 80
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 60
            successThreshold: 1
            timeoutSeconds: 15
          readinessProbe:
            httpGet:
              path: /misc/ping
              port: 80
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 60
            successThreshold: 1
            timeoutSeconds: 15
          volumeMounts:
            - name: pgadmin-data
              mountPath: /var/lib/pgadmin
          resources:
            {}
      volumes:
        - name: pgadmin-data
          persistentVolumeClaim:
            claimName: pgadmin-pgadmin4
      securityContext:
        fsGroup: 5050
        runAsGroup: 5050
        runAsUser: 5050
---
# Source: pgadmin4/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "pgadmin-pgadmin4-test-connection"
  labels:
    app.kubernetes.io/name: pgadmin4
    helm.sh/chart: pgadmin4-1.6.1
    app.kubernetes.io/instance: pgadmin
    app.kubernetes.io/version: "5.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  securityContext:
    runAsNonRoot: true
    fsGroup: 5051
    runAsGroup: 5051
    runAsUser: 5051
  containers:
    - name: wget
      image: "docker.io/busybox:latest"
      command:
        - /bin/sh
        - -ec
        - |
          response=$(wget -qSO - http://${PGADMIN_HOST}:${PGADMIN_PORT} 2>&1)
          check=$(echo $response | grep -c '200 OK'); echo $check; if [[ $check -gt 0 ]]; then echo "Response OK"; else exit 1; fi
      resources:
        {}
      securityContext:
        readOnlyRootFilesystem: true
  restartPolicy: Never
